<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMainReg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_defaultNameCode="RU"  />
        <EditText
            android:id="@+id/etNumberOrEmail"
            android:hint="@string/email"
            android:theme="@style/ThemeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <RadioGroup
            android:id="@+id/rg"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbPhone"
                android:text="@string/phone"
                android:textColor="@color/radiobutton_state"
                android:textAlignment="center"
                android:background="@drawable/rectangle_button"
                android:button="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_rbtn" />
            <RadioButton
                android:id="@+id/rbMail"
                android:text="@string/email"
                android:textColor="@color/radiobutton_state"
                android:textAlignment="center"
                android:background="@drawable/rectangle_button"
                android:button="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_rbtn"  />
        </RadioGroup>
    <Button
        android:id="@+id/btnSendCode"
        android:textColor="@color/colorWhite"
        android:background="?android:attr/selectableItemBackground"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:textAllCaps="true"
        />
    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llSendCode"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tvSendCodeAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etConfirmationCode"
                android:inputType="numberDecimal"
                android:layout_gravity="center_horizontal"
                android:theme="@style/ThemeStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvConfirmation"
                android:text="@string/confirmation_code"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRegistration"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="@dimen/login_spacing_bottom">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNameReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeStyle"
                    android:hint="@string/name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="@dimen/login_spacing_bottom">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPasswordReg"
                android:layout_width="match_parent"
                android:theme="@style/ThemeStyle"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="@dimen/login_spacing_bottom">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeStyle"
                android:hint="@string/again_password"
                android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvGoToRegistration"
                android:text="@string/go_to_registration"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ViewFlipper>



</LinearLayout>
